--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 						</div>
 					</article>
 					<img
-						src="E:\placement training MERN\portfolio\coding1.jpg"
+						src="coding1.jpg"
 						alt="coding desk"
 						class="fade-in code" />
 				</div>
@@ -168,7 +168,7 @@
 			<section class="about-me" id="about">
 				<div class="container" data-aos="fade-up">
 					<!-- <img src="E:\placement training MERN\portfolio\mypicture.jpg" alt="sreeja" /> -->
-					<img src="E:\placement training MERN\portfolio\mypicture-new.JPG" alt="sreeja" />
+					<img src="mypicture-new.JPG" alt="sreeja" />
 					<article>
 						<p class="subtitle">Who is Sreeja Karanam?</p>
 						<h2 class="title">A Bit About Me</h2>
@@ -246,7 +246,7 @@
 								rel="noreferrer"
 								class="project-img"
 								><img
-									src="E:\placement training MERN\portfolio\time_series.webp"
+									src="time_series.webp"
 									alt="time series forecasting"
 									title="the/movieflix"
 							/></a>
@@ -299,7 +299,7 @@
 								rel="noreferrer"
 								class="project-img"
 								><img
-									src="E:\placement training MERN\portfolio\chatgpt.png"
+									src="chatgpt.png"
 									alt="chatgpt integration"
 									title="the/movieflix"
 							/></a>
@@ -348,7 +348,7 @@
 								rel="noreferrer"
 								class="project-img"
 								><img
-									src="E:\placement training MERN\portfolio\spam_email1.jpg"
+									src="spam_email1.jpg"
 									alt="spam email"
 									title="github profile"
 							/></a>
@@ -397,7 +397,7 @@
 								rel="noreferrer"
 								class="project-img"
 								><img
-									src="E:\placement training MERN\portfolio\travel_route2.jpg"
+									src="travel_route2.jpg"
 									alt="covid map dashboard website screenshot"
 									title="covid map dashboard"
 							/></a>
