--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 			<section class="about-me" id="about">
 				<div class="container" data-aos="fade-up">
 					<!-- <img src="E:\placement training MERN\portfolio\mypicture.jpg" alt="sreeja" /> -->
-					<img src="mypicture-new.JPG" alt="sreeja" />
+					<img src="mypicture-new1.JPG" alt="sreeja" />
 					<article>
 						<p class="subtitle">Who is Sreeja Karanam?</p>
 						<h2 class="title">A Bit About Me</h2>
